# notecode

./: .gitignore  Docker in action.md  Keycloak Authorization Services.md  Patterns of enterprise application architecture.md  Python Concurrency: from beginner to pro - Santiago Basulto.md  UnitTestingPrinciplesPractices&Patterns.md  algebra.md  algebra1FullCourse.md  algebra2FullCourse.md  anIntroductionToDesign-CRC.md  anIntroductionToRefactoring.md  architecturePatternsWithPython.md  c#12InANutshell.md  cleanCode.md  collegeAlgebraFullCourse.md  computerNetworking-aTopDownApproach.md  computerNetworkingATopDownApproach.md  databaseConcepts.md  designPatternsInObjectOrientedProgramming.md  dockerInAction.md  elasticsearchInACtion.md  elasticsearchInAction.md  fastAPI.md  jsonSchema.md  learningSQL.md  loggingInPython.md  main.py  mathematics.md  nats.md  programmingInLua.md  pyproject.toml  pythonTricksTheBook.md  readme.txt  redisExplained.md  temporal-101-python.md  temporal-101.md  temporal-102-python.md  temporal101Python.md  temporal102Python.md  temporalWorkflowInteractionPython.md  (+1 more)
API design patterns - JJ Geewax/: 1.md  2.md  3.md  4.md  5.md
Apache Kafka Guide - Cloudera/: 1.md
Clean code - Robert C. Martin/: 10.md  11.md  12.md  2.md  3.md  4&5.md  6.md  7.md  8.md  9.md
Kafka The Definitive Guide: Real Time Data & Stream Processing At Scale - O'reilly/: 1.md  3.md
Learning SQL - Alan Beaulieu/: 10.md  12.md  13.md  2.md  3.md  4.md  5.md  6.md  8.md  9.md
Python tricks the book - Dan Bader/: 2.md  3.md  4.md  5.md  6.md
async/: Coroutines.md  (+3 more)
(+175 files in other folders)
