[project]
name = "notecode"
version = "0.0.0"
description = "sample codes and notes for learning things. pretty much everything I know (or less); what a shame, huh?!"
readme = "readme.txt"
requires-python = ">=3.13"
dependencies = [
    "temporalio>=1.18.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E4", "E7", "E9", "F", "I"]
lint.ignore = ["F401"]
lint.fixable = ["ALL"]

[tool.pyright]
autoSearchPaths = true
typeCheckingMode = "strict"
reportUnusedImport = false
reportUnusedVariable = false
